# Portfolio_Prophet

./: Pipfile  README.md  manage.py  pyproject.toml
accounts/: admin.py  forms.py  models.py  serializers.py  urls.py  views.py
accounts/migrations/: 0001_initial.py  0002_auto_20210712_1325.py
portfolio_prophet/: asgi.py  settings.py  urls.py  wsgi.py
portfolio_test/: apps.py  cron.py  models.py  serializers.py  urls.py  views.py
portfolio_test/migrations/: 0001_initial.py  0002_auto_20210712_0339.py  0002_portfolio_watchlist.py  0003_auto_20210712_0339.py  0004_auto_20210712_0340.py  0005_auto_20210712_0658.py  0006_auto_20210712_0952.py  0007_auto_20210713_0359.py  0008_auto_20210713_0954.py
portfolio_test/templates/portfolio_test/: base.html  index.html
stocks/: cron.py  models.py  serializers.py  urls.py  views.py
stocks/migrations/: 0001_initial.py  0002_rename_trans_date_portfolio_date.py
stocks/templates/portfolio_test/: index.html
