[tool.poetry]
name = "portfolio-prophet-back"
version = "0.1.0"
description = ""
authors = ["BrianLim80 <brian.lim.kc@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
prophet = "^1.0.1"
Django = "^3.2.5"
psycopg2-binary = "^2.9.1"
Pillow = "^8.3.1"
djangorestframework = "^3.12.4"
Markdown = "^3.3.4"
django-filter = "^2.4.0"
yfinance = "^0.1.63"
django-chartjs = "^2.2.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
